# Illustrator_assistant_AI

./: CMakeLists.txt  README.md  main.cpp  output.xcf  specification.md  test.cpp  test.py
Data/: BinaryManager.cpp  CsvManager.cpp  DataManager.hpp  JsonManager.cpp
Data/Csv/: test.csv
Data/Json/: TagList.json
ai_models/ai_module/: DataShaping.cpp  DataShaping.hpp  IllustAssistantAIManager.hpp  RoughToLineArt.cpp  RoughToLineArt.hpp
